# SaMD-followup

./: .gitignore  README.md  ai-ml-enabled-devices.csv  pyproject.toml
config/: settings.py
data/: fda_v2_b1.json  fda_v2_b2.json  fda_v3_b1.json  fda_v3_b2.json  fda_v3_b3.json  pipeline_results.json  pmda_results.json
data/seed/: pmda_devices.csv  sample_pmda_devices.csv
docs/: DESIGN.md
scripts/: fetch_fulltext.py  load_to_db.py  monthly_update.sh  rescore_fulltext.py  run_pipeline.py
src/: bootstrap.py  pipeline.py  utils.py
src/api/: examples.py  routes.py  schemas.py
src/config/: settings.py
src/db/: __init__.py  connection.py  repositories.py  schema.sql  schema_pg95.sql
src/ingestion/: __init__.py  cross_region.py  fda.py  fda_scraper.py  jp_mappings.py  normalizer.py  pmda.py  pmda_scraper.py
src/linking/: __init__.py  deduplicator.py  scorer.py
src/literature/: __init__.py  europe_pmc.py  fulltext.py  local_openalex.py  local_pmc.py  openalex.py  parsers.py  pubmed.py  query_generator.py
src/models/: __init__.py  linking.py  paper.py  product.py
src/ui/: app.py
src/ui/templates/: base.html  dashboard.html  paper_detail.html  papers.html  product_detail.html  products.html  review.html  sql.html
